# SimFS

./: .gitignore  CMakeLists.txt  README.md  Step_1.md  exports.ps1  step1.c
src/: CMakeLists.txt
src/partition/: CMakeLists.txt  defines.h  index.h  partition.c  partition.h
src/sys/: types.h
src/volume/: CMakeLists.txt  volume.c  volume.h
src/volume/block/: block.h  content.h  descriptor.h
